[metadata]
name = doc8
summary = Style checker for Sphinx (or other) RST documentation
description-file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
maintainer = PyCQA
maintainer_email = code-quality@python.org
home_page = https://github.com/pycqa/doc8
long_description_content_type = text/x-rst
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[entry_points]
console_scripts =
    doc8 = doc8.main:main

[flake8]
builtins = _
show_source = True
exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
# Minimal config needed to make flake8 compatible with black output:
max_line_length=160
# See https://github.com/PyCQA/pycodestyle/issues/373
extend_ignore = E203

[options]
python_requires = >=3.6
