[metadata]
name = doc8
url = https://github.com/pycqa/doc8
project_urls =
    Bug Tracker = https://github.com/pycqa/doc8/issues
    Release Management = https://github.com/pycqa/doc8/releases
    CI = https://github.com/pycqa/doc8/actions
    Documentation = https://doc8.readthedocs.io
    Discussions = https://github.com/pycqa/doc8/discussions

description = Style checker for Sphinx (or other) RST documentation
long_description = file: README.rst
long_description_content_type = text/x-rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
maintainer = PyCQA
maintainer_email = code-quality@python.org
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    doc8
    rst
    linter

[flake8]
builtins = _
show_source = True
exclude=.venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
# Minimal config needed to make flake8 compatible with black output:
max_line_length=160
# See https://github.com/PyCQA/pycodestyle/issues/373
extend_ignore = E203

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False
# These are required in actual runtime:
install_requires =
    docutils
    restructuredtext-lint>=0.7
    stevedore
    Pygments

[options.entry_points]
console_scripts =
    doc8 = doc8.main:main

[options.packages.find]
where = src
